fix Notice width on mobile screen

--- a/src/components/Notice/index.scss
+++ b/src/components/Notice/index.scss
@@ -38,5 +38,7 @@
         width: 100%;
         border:none;
         border-radius: 0;
+        padding: 0;
+        margin:0;
     }
 }
